--- a/views/music.html
+++ b/views/music.html
@@ -1,12 +1,27 @@
+<!-- Delcare header -->
 <div inner-nav></div>
+
+<!-- Start container -->
 <section class="container inner">
 	<h2>{{ title }}</h2>
+
+	<!-- Start row -->
 	<div class="row">
+
+		<!-- Audio section - embbed from soundcloud-->
 		<div class="col-md-6">
 			<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/5747648&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 		</div>
+		<!-- /Audio section -->
+
+		<!-- Video section - embbed from Youtube -->
 		<div class="col-md-6">
 			<iframe width="100%" height="450" src="https://www.youtube.com/embed/i_nCiAVFe6E" frameborder="0" allowfullscreen></iframe>
 		</div>
+		<!-- /Video section -->
+
 	</div>
+	<!-- /End row -->
+
 </section>
+<!-- End container -->
