--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* mixin  library */
+/* Reset */
 /* Eric Meyer's CSS Reset
    http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -56,6 +58,8 @@ table {
   border-spacing: 0;
 }
 
+/* Main colors */
+/* Fonts */
 body {
   color: #262626;
   font-family: "Droid Serif", serif;
@@ -125,6 +129,11 @@ a, figcaption {
 
 a:hover {
   text-decoration: none;
+}
+
+/* Base styles */
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
 }
 
 body {
@@ -272,6 +281,12 @@ strong {
   color: #f5f5f5;
 }
 
+.inner {
+  background: #f5f5f5;
+  padding: 40px 30px;
+}
+
+/* Header styles */
 .home-header {
   background: url("../images/band-2.jpg");
   background-repeat: no-repeat;
@@ -387,6 +402,7 @@ strong {
   width: 150px;
 }
 
+/* Navigation styles */
 nav {
   -webkit-box-align: center;
   -moz-box-align: center;
@@ -476,6 +492,7 @@ nav {
   }
 }
 
+/* Footer styles */
 footer {
   color: #dcdcdc;
 }
@@ -550,11 +567,7 @@ footer .footer-bottom .social {
   }
 }
 
-.inner {
-  background: #f5f5f5;
-  padding: 40px 30px;
-}
-
+/* Homepage styles */
 .intro {
   background: #f5f5f5;
   float: left;
@@ -661,6 +674,7 @@ footer .footer-bottom .social {
   line-height: 1.625em;
 }
 
+/* Gig page styles */
 .gig-item {
   background: #f5f5f5;
   border: 1px solid #262626;
@@ -757,6 +771,7 @@ input.ng-valid {
   text-align: center;
 }
 
+/* Contact page styles */
 .form-wrapper {
   box-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.2);
 }
