--- a/views/header-home.html
+++ b/views/header-home.html
@@ -1,15 +1,23 @@
 <header class="home-header">
+	
+	<!-- Start navigation -->
 	<nav>
-	  <div class="logo"><a href="/#/" class="item"><img src="images/logo.jpg" alt=""></a></div>
-	  <a href="/#/band" class="item">Band</a>
-	  <a href="/#/gigs" class="item">Gigs</a>
-	  <a href="/#/music" class="item">Music</a>
-	  <a href="/#/contact" class="item">Contact</a>
+		<!-- Logo -->
+	    <div class="logo"><a href="/#/" class="item"><img src="images/logo.jpg" alt=""></a></div>
+		<!-- /Logo -->
+	  	<a href="/#/band" class="item">Band</a>
+	  	<a href="/#/gigs" class="item">Gigs</a>
+	  	<a href="/#/music" class="item">Music</a>
+	  	<a href="/#/contact" class="item">Contact</a>
 	</nav>
-
+	<!-- End navigation -->
+	
+	<!-- Start homepage hero -->
 	<div class="col-md-12 cta">
 		<h1>AeSect are a modern influenced metal band based in Dublin, Ireland.</h1>
 		<a href="/#/contact" class="btn">Book Us</a>
 		<a href="/#/music" class="btn">New Music</a>
 	</div>
+	<!-- End homepage hero -->
+
 </header>
