--- a/views/header-inner.html
+++ b/views/header-inner.html
@@ -1,11 +1,21 @@
 <header class="inner-header">
+
+	<!-- Main container -->
 	<div class="container">
+
+		<!-- Start navigation -->
 		<nav>
-		  <div class="logo"><a href="/#/" class="item"><img src="images/logo.jpg" alt=""></a></div>
-		  <a href="/#/band" class="item">Band</a>
-		  <a href="/#/gigs" class="item">Gigs</a>
-		  <a href="/#/music" class="item">Music</a>
-		  <a href="/#/contact" class="item">Contact</a>
+			<!-- Logo -->
+			<div class="logo"><a href="/#/" class="item"><img src="images/logo.jpg" alt="AeSect Logo"></a></div>
+			<!-- /Logo -->
+			<a href="/#/band" class="item">Band</a>
+			<a href="/#/gigs" class="item">Gigs</a>
+			<a href="/#/music" class="item">Music</a>
+			<a href="/#/contact" class="item">Contact</a>
 		</nav>
+		<!-- End navigation -->
+
 	</div>
+	<!-- /Main container -->
+
 </header>
